Updated course description

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -136,12 +136,12 @@
 
 \begin{center}
 {\bf \LARGE Course Overview and Syllabus:}
-{\bf \LARGE Math 3350, Sec 05. Statistical Methods, Fall 2025}
+{\bf \LARGE Math 4450, Sec 01. ``Mathematical Statistics I", Fall 2025}
 \end{center}
 
 \vspace{3mm}
 
-Course Website: \href{https://jeswheel.github.io/3350\_f25}{https://jeswheel.github.io/3350\_f25}
+Course Website: \href{https://jeswheel.github.io/4450\_f25}{https://jeswheel.github.io/4450\_f25}
 
 \section{Instructor Information}
 
@@ -160,33 +160,32 @@ Feel free to email me over the weekends, but I may not be actively monitoring my
 
 \section{Course Description}
 
-A calculus-based introduction to statistical procedures, including simple regression, basic experimental design, and non-parametric methods. 
-PREREQ: MATH 1160 or MATH 1170.
+The first of a two-part sequence on:
+Probability, random variables, discrete and continuous distributions, order statistics, limit theorems, point and interval estimation, uniformly most powerful tests, likelihood ratio tests, chi-square and F tests, nonparametric tests. 
+PREREQ: MATH 3326 and MATH 3352. Offered Odd Years in the Fall Semester.
 
-This course is 3 Credit Hours, and we meet every Monday, Wednesday, Friday 9:00 am - 9:50 am, PS 324, with the exception of university-observed holidays and breaks.
+This course is 3 Credit Hours, and we meet every Tuesday and Thursday, 11:00 am - 12:15 pm, PS 313, with the exception of university-observed holidays and breaks.
 
-This course is a prerequisite for Math 4457, Math 4458, and Math 4459. A student must earn a C- or better in this class in order to use this as a pre-requisite for one of these courses.
+This course is a prerequisite for Math 4451. A student must earn a C- or better in this class in order to use this as a pre-requisite for this course.
 
 \subsection{Course Objectives and Outcomes}
 
 \begin{itemize}
-  \item Students will perform a descriptive data analysis for one variable and descrive the relation between two variables.
+  \item Students will use methods of intermediate probability theory.
   \begin{itemize}
-    \item Select and display the proper graph for the data.
-    \item Compute the appropriate numberical values for summarizing the variable or relationship.
-    \item Write an informative but brief descritption of the variable or relation between variables in the context of the problem.
+    \item Perform probability calculations.
+    \item Develop probability models.
+    \item Prove elementary results about probability.
   \end{itemize}
-  \item Students will demonstrate an understanding of probability models.
+  \item Students will use random variables.
   \begin{itemize}
-    \item Perform computations using the basic axioms and rules of probability. 
-    \item Compute probabilities using a common probability model.
+    \item Perform rigorous probability calculations involving random variables.
+    \item Obtain distributional information about a random variable.
   \end{itemize}
-  \item Students will perform an inferential analysis.
+  \item Students will use theory associated with random variables.
   \begin{itemize}
-    \item Perform a hypothesis test or construct a confidence interval. 
-    \item Assess the required assumptions and conditions.
-    \item Select and compute the appropriate numerical values.
-    \item State a correct conclusion in the context of the problem.
+    \item Determine the distribution of a functional combination of a list of random variables.
+    \item Determine the distribution of the limit of a sequence of random variables.
   \end{itemize}
 \end{itemize}
 
@@ -199,9 +198,9 @@ Students will be dropped from their courses if they do not attend the first week
 
 After the first week of classes, attendance is expected but will not be recorded.
 Lectures will not be recorded, but slides will be available to students who miss lecture.
-Course materials, activities, and assignments will be posted on Canvas.\\ 
+Course materials, activities, and assignments will be posted on Canvas.
 
-\textbf{General course information can be found at the course website:} \url{https://jeswheel.github.io/3350\_f25}
+\textbf{General course information can be found at the course website:} \url{https://jeswheel.github.io/4550\_f25}
 
 \subsection{Assessment Methods}
 
@@ -210,8 +209,10 @@ Student understanding will be assessed via homework, quizes, a midterm exam, and
 \section{Textbook and Course Materials}
 
 \begin{hangparas}{0.25in}{1}
-Baldi, Brigitte, and David S. Moore. \emph{The practice of statistics in the life sciences}. Freeman, 2012. ISBN: 9781319403348.
+John A. Rice. \emph{Mathematical Statistics and Data Analysis}. Vol. 371. Belmont, CA: Thomson/Brooks/Cole, 2007. Third Edition. ISBN: 0-534-39942-8.
 \end{hangparas}
+
+This text will be required.
 
 \subsection{Software}
 
