updated syllabus dates

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -286,25 +286,26 @@ This table will be updated on the course website as needed.
 \hline
 \endhead
 
-1 & Aug 25, 27, 29 & Chapter 1, 2 & Graphs and Summaries \\ \hline
-2 & Sep {\color{red} \sout{1}}, 3, 5 & Chapter 3 & Scatterplots and Correlation \\ \hline
-3 & Sep 8, 10, 12 & Chapter 4 & Regression \\ \hline
-4 & Sep 15, 17, 19 & Chapter 5 & Two-Way Tables \\ \hline
-5 & Sep 22, 24, 26 & Chapter 6, 7 & Samples vs Experiments \\ \hline
-6 & Sep 29, Oct 1, 3 & Chapter 9 & Probability \\ \hline
-7 & Oct 6, 8, 10 & Chapter 10 & Independence \\ \hline
-8 & Oct 13, 15, {\color{blue} \textbf{17}} & Chapter 11, 12 & Common Distributions \\ \hline
-9 & Oct 20, 22, 24 & Chapter 13 & Sampling Distributions \\ \hline
-10 & Oct 27, 29, 31 & Chapter 14 & Inference \\ \hline
-11 & Nov 3, 5, 7 & Chapter 15 & Inference in Practice\\ \hline
-12 & Nov 10, 12, 14 & Chapter 17-18 & Inference for Population Mean \\ \hline
-13 & Nov 17, 19, 21 & Chapter 18-19 & Inference for Proportions\\ \hline
-14 & Nov 24, 26, 28 & \multicolumn{2}{l|}{Fall Break - No Classes} \\ \hline
-15 & Dec 1, 3, 5 & Chapter 20 & Comparing Proportions \\ \hline
-16 & Dec 8, 10, 12 & Chapters 21-23 & Additional Topics \\ \hline
+1 & Aug 26, 28     &  &  \\\hline
+2 & Sep 2, 4       &  &  \\\hline
+3 & Sep 9, 11      &  &  \\\hline
+4 & Sep 16, 18     &  &  \\\hline
+5 & Sep 23, 25     &  &  \\\hline
+6 & Sep 30, Oct 2  &  &  \\\hline
+7 & Oct 7, 9       &  &  \\\hline
+8 & Oct 14, {\color{blue} \textbf{16}}     &  &  \\\hline
+9 & Oct 21, 23     &  &  \\\hline
+10 & Oct 28, 30    &  &  \\\hline
+11 & Nov 4, 6      &  &  \\\hline
+12 & Nov 11, 13    &  &  \\\hline
+13 & Nov 18, 20    &  &  \\\hline
+14 & \multicolumn{3}{|c|}{\textit{Fall Break (No Classes, Nov 25 \& 27)}} \\\hline
+15 & Dec 2, 4      &  &  \\\hline
+16 & Dec 9, 11     &  &  \\\hline
 17 & Dec 15--19 & \multicolumn{2}{l|}{Finals Week (Dec 17)} \\ \hline
 
 \end{longtable}
+
 
 For other important dates and deadlines, please see the University academic calendar: \url{https://www.isu.edu/academiccalendar/}.
 
