Started work on Chapter 1 slides

--- a/header.tex
+++ b/header.tex
@@ -36,6 +36,7 @@
 \newcommand\lik{\mathcal{L}}
 \newcommand\loglik{\ell}
 \newcommand\R{\mathbb{R}}
+\newcommand\N{\mathbb{N}}
 \newcommand\Rzero{\mathfrak{R}_0}
 \newcommand\argmax{\mathop{\mathrm{argmax}}}
 \newcommand\argmin{\mathop{\mathrm{argmin}}}
@@ -140,7 +141,10 @@
 \newcommand\negBeforeCode{}
 \newcommand\negAfterCode{}
 
-\mode<beamer>{\usetheme{AnnArbor}}
+% \mode<beamer>{\usetheme{AnnArbor}}
+\usetheme{metropolis}
+% \mode<beamer>{\usecolortheme{dolphin}}
+% \mode<beamer>{\usefonttheme{serif}}
 \mode<beamer>{\setbeamertemplate{footline}}
 \mode<beamer>{\setbeamertemplate{footline}[frame number]}
 \mode<beamer>{\setbeamertemplate{frametitle continuation}[from second][\insertcontinuationcountroman]}
